--- a/packages/connect-react/src/css/login.css
+++ b/packages/connect-react/src/css/login.css
@@ -37,7 +37,7 @@
   margin: 0.5rem 0;
 }
 
-.cb-login__loader-container {
+.cb-login-loader-container {
   width: 100%;
   display: flex;
   justify-content: center;
@@ -45,7 +45,7 @@
   padding-bottom: 1rem;
 }
 
-.cb-login__loader {
+.cb-login-loader {
   width: 50px;
   height: 50px;
 }
